changed styling and added pictures

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<main class="container">
 			<section id="headerContent">
 				<div class="row">
-					<h1 class="col col-4">Woooooo!</h1>
+					<h1 class="col col-4">Welcome to the party!</h1>
 				</div>
 				<section>
 					<div class="row">
@@ -47,9 +47,11 @@
 							    </li>
 							</ul>
 							<button class="btn btn-primary partyButton">
-								Click to Party
+								Click this to see something cool!
 							</button>
-							<h1 class="partyMessage">yayyy</h1>
+							<h1 class="partyMessage">Hi. 
+								<br>
+								<br> What? Were you expecting something better? <img src="Deal_With_It.jpg" alt="deal with it"></h1>
 						</div>
 						<div class="col col-4 description">
 							<span>Take a look at this delicious pizza!</span>
@@ -60,18 +62,13 @@
 					</div>
 				</section>
 
-				<p> Okay, I get it. The party isn't very thrilling, but this will one day turn into an enormous party! Scratch that. Not just enormous, but <u>legendary</u>!!
-					How do I plan on making this boring, barren waste land of a web page a party you ask? Well to be frank, I'm still trying to figure that part out.
-					But rest assured, it will happen.
-				</p>
+			
 			</section>
 		</main>
 
 		<div class="container">
-			<section id="content">
-				<div class="row">
-					<h2 class="col col-8 title">The mysterious link of links</h2>
-				</div>
+			<section id="content">	
+			
 				<p> What if I told you the hyperlink below could net you one millon dollars? Sounds quite enticing doesn't it? Imagine what you could do with one million dollars...
 					Buy a new car, a new house, pay off those pesky student loans, tacos! The options are endless. What do you have to lose? All of your personal information you say? Muahahaha...Ahem. Sorry about that. Nah, this link will really make my, I mean your day.  Click it!</p>
 			</section>
@@ -82,9 +79,6 @@
 					<ul class="navbar-nav">
 						<li class="nav-item">
 							<a class="nav-link" href="aboutme.html">mysterious link of links</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="aboutme.html">after party!</a>
 						</li>
 					</ul>
 				</nav>
