added new images, backgrounds, and updated some code

--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@
 		</div>
 			<div class="row">
 				<div class="col-6">
-					<p> Here is a nice, happy picture of Ryan Arnold before he found out he was being summoned for work on a beautiful summer day.</p>
+					<p> Here is a nice, happy picture of myself before I found out I was being summoned for work on a beautiful summer day.</p>
 				</div>
 				<div class="col-6">
 					<p>
@@ -67,14 +67,14 @@
 				<div class="col-md-6 offset-md-4">
 					<input id="timesheetMessage" placeholder="message"/>
 					<button class="btn btn-primary addEvent">
-						Add to Timeline
+						Create your own timeline!
 					</button>
 				</div>
 			</div>
 			<div id="userTimesheet"></div>
 
-
-			<p> Ah...Nothing better than a surprise dose of work on a day you thought you had off. </p>
+			<br>
+			<p> Ah...Nothing better than a surprise dose of work on a day you thought you had off. Try the timeline out yourself! </p>
 		</main><!-- /.container -->
 	</body>
 	</html>
