--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 		<main class="container">
 			<section id="headerContent">
 				<div class="row">
-					<h1 class="col col-4">Welcome to the party!</h1>
+					<h1 class="col col-8">Welcome to the party!</h1>
+					<br>
 				</div>
 				<section>
 					<div class="row">
@@ -47,17 +48,17 @@
 							    </li>
 							</ul>
 							<button class="btn btn-primary partyButton">
-								Click this to see something cool!
+								Click here! I have something cool to say!
 							</button>
-							<h1 class="partyMessage">Hi. 
+							<h1 class="partyMessage">Hi... 
 								<br>
 								<br> What? Were you expecting something better? <img src="Deal_With_It.jpg" alt="deal with it"></h1>
 						</div>
 						<div class="col col-4 description">
-							<span>Take a look at this delicious pizza!</span>
+							<span>Take a look at these delicious pizzas!</span>
 						</div>
 						<div class="col col-4 description">
-							<span>Yum...Pizza!</span>
+							<span> <img src="homer.jpg" alt="mmm pizza"></span>
 						</div>
 					</div>
 				</section>
