reworded some text

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 						<a class="nav-link" href="aboutme.html">Free Tacos!</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="aboutme.html">Pizza!</a>
+						<a class="nav-link" href="aboutme.html">Free Pizza!</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="aboutme.html">Carrots?</a>
+						<a class="nav-link" href="aboutme.html">Free Carrots?</a>
 					</li>
 				</ul>
 			</div>
@@ -33,7 +33,7 @@
 		<main class="container">
 			<section id="headerContent">
 				<div class="row">
-					<h1 class="col col-8">Welcome to the party!</h1>
+					<h1 class="col col-8">Welcome!</h1>
 					<br>
 				</div>
 				<section>
@@ -47,12 +47,12 @@
 							      <img src="pizza2.png" alt="delicous pizza">
 							    </li>
 							</ul>
-							<button class="btn btn-primary partyButton">
-								Click here! I have something cool to say!
-							</button>
-							<h1 class="partyMessage">Hi... 
-								<br>
-								<br> What? Were you expecting something better? <img src="Deal_With_It.jpg" alt="deal with it"></h1>
+							<!-- <button class="btn btn-primary partyButton"> -->
+								<!-- Click here! I have something cool to say! -->
+							<!-- </button> -->
+							<!-- <h1 class="partyMessage">Hi...  -->
+								<!-- <br> -->
+								<!-- <br> What? Were you expecting something better? <img src="Deal_With_It.jpg" alt="deal with it"></h1> -->
 						</div>
 						<div class="col col-4 description">
 							<span>Take a look at these delicious pizzas!</span>
@@ -62,8 +62,14 @@
 						</div>
 					</div>
 				</section>
-
-			
+					<button class="btn btn-primary partyButton">
+								Click here! I have something cool to say!
+							</button>
+						<h1 class="partyMessage">Hi... 
+								<br>
+								<br> What? Were you expecting something better? <img src="Deal_With_It.jpg" alt="deal with it"></h1>
+								<br>
+								<br>
 			</section>
 		</main>
 
