--- a/aboutme.html
+++ b/aboutme.html
@@ -45,10 +45,10 @@
 	</nav>
 
 	<main role="main" class="container">
-		<h1 style="margin-top:60px"> So about the million dollars, the free tacos, the free pizza, and most importantly the free carrots!</h1>
+		<h1 style="margin-top:60px"> So about the million dollars, the free tacos, the free pizza, and yes even the free carrots!</h1>
 		<div class="row">
 			<div class="col-6">
-				<p> I made that whole bit up. I just wanted you to click on the link to boost my website's hit count up. And now it's at 50! I may have inflated those numbers by refreshing the page 49 times, but no one needs to know that.
+				<p> I made that whole bit up. I just wanted you to click on the link to boost my website's hit count up. And now it's at 50! I may have inflated those numbers by refreshing the page 49 times, but who's counting?
 			</div>
 		</div>
 			<div class="row">
@@ -74,7 +74,7 @@
 			<div id="userTimesheet"></div>
 
 			<br>
-			<p> Ah...Nothing better than a surprise dose of work on a day you thought you had off. Try the timeline out yourself! </p>
+			<p> Ah...Nothing better than a surprise dose of work on a day you thought you had off. I hope you enjoyed my sad and horrific tale of being summoned in to work! </p>
 		</main><!-- /.container -->
 	</body>
 	</html>
